--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'antlr'
 apply plugin: 'jacoco'
+apply plugin: 'osgi'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
