--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ apply plugin: 'osgi'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 def releaseVersion = System.properties.RELEASE_VERSION
-version = releaseVersion ? releaseVersion : new SimpleDateFormat('yyyy-MM-dd\'T\'HH-mm-ss').format(new Date())
+//version = releaseVersion ? releaseVersion : new SimpleDateFormat('yyyy-MM-dd\'T\'HH-mm-ss').format(new Date())
+version = '3.0.0-jahia1-SNAPSHOT'
 group = 'com.graphql-java'
 
 
@@ -119,6 +120,16 @@ publishing {
                         }
                     }
                 }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            url "https://devtools.jahia.com/nexus/content/repositories/thirdparty-snapshots"
+            credentials {
+                username = mavenUser
+                password = mavenPassword
             }
         }
     }
