--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
         mavenLocal()
         maven { url "https://jcenter.bintray.com/" }
         google()
-        mavenCentral()
         maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
         maven { url "https://jitpack.io" }
         maven { url "https://plugins.gradle.org/m2/" }
@@ -39,7 +38,7 @@ def getDevelopmentVersion() {
     }
     def version = new SimpleDateFormat('yyyy-MM-dd\'T\'HH-mm-ss').format(new Date()) + "-" + gitHash
     println "created development version: $version"
-    "13.0.1-jahia" // custom version, to be updated when releasing a new patch
+    version
 }
 
 
@@ -57,7 +56,6 @@ repositories {
     mavenLocal()
     maven { url "https://jcenter.bintray.com/" }
     google()
-    mavenCentral()
     maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
     maven { url "https://jitpack.io" }
     maven { url "https://plugins.gradle.org/m2/" }
