--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,8 @@ buildscript {
     repositories {
         mavenCentral()
         mavenLocal()
-        maven { url "https://jcenter.bintray.com/" }
-        google()
-        maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
-        maven { url "https://jitpack.io" }
-        maven { url "https://plugins.gradle.org/m2/" }
+        // add this repository that has the old org.codehaus.groovy.modules.http-builder:http-builder:0.7.2 jar
         maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
-    }
-    dependencies {
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
     }
 }
 
@@ -54,12 +47,6 @@ group = 'com.graphql-java'
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url "https://jcenter.bintray.com/" }
-    google()
-    maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
-    maven { url "https://jitpack.io" }
-    maven { url "https://plugins.gradle.org/m2/" }
-    maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
 }
 
 apply plugin: 'groovy'
